CloudFormation/Bastion Host/bastion.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Bastion Host Deployment'

Metadata:

  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Network Configuration"
        Parameters:
          - VpcId
          - InstanceSubnet
          - PublicIP
      -
        Label:
          default: "Bastion Configuration"
        Parameters:
          - EC2KeyPair
          - UnderlyingOS

    ParameterLabels:
      VpcId:
        default: "Which VPC should this be deployed to?"
      InstanceSubnet:
        default: "What subnet should this be deployed to?"
      EC2KeyPair:
        default: "Select the key pair to use"
      PublicIP:
        default: "Where will you be connecting from?"
      UnderlyingOS:
        default: "What OS should be deployed?"


Parameters:

  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Select the VPC

  InstanceSubnet:
    Type: AWS::EC2::Subnet::Id
    Description: Select the subnet for the bastion host

  EC2KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select the EC2 Key Pair to use for instance

  PublicIP:
    Type: String
    Description: Public IP address from which to restrict traffic from (e.g., 12.34.56.78/32)
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: Value must be in the format of <ip address>/<cidr>

  UnderlyingOS:
    Type: String
    Description: Select the desired operating system.
    AllowedValues:
      - Linux
      - Windows

Mappings:

  Windows:
    us-east-1:
      "AMI": "ami-603b1c1a"
    us-east-2:
      "AMI": "ami-16370073"
    us-west-1:
      "AMI": "ami-e8b6be88"
    us-west-2:
      "AMI": "ami-74800e0c"

  Linux:
    us-east-1:
      "AMI": "ami-1853ac65"
    us-east-2:
      "AMI": "ami-25615740"
    us-west-1:
      "AMI": "ami-bf5540df"
    us-west-2:
      "AMI": "ami-d874e0a0"

Conditions:

  IsItWindows: !Equals [!Ref UnderlyingOS, "Windows"]
  IsItLinux: !Equals [!Ref UnderlyingOS, "Linux"]

Resources:

  WindowsBastionHost:
    Type: AWS::EC2::Instance
    Condition: IsItWindows
    DependsOn:
      - WindowsRDPSecurityGroup
    Properties:
      ImageId: !FindInMap [Windows, !Ref "AWS::Region", AMI]
      InstanceType: t2.small
      KeyName: !Ref EC2KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: WindowsRDPSecurityGroup
          SubnetId:
            Ref: InstanceSubnet
      Tags:
      - Key: "Name"
        Value: "Windows Bastion"
      - Key: "Environment"
        Value: "Management"
      - Key: "Operating System"
        Value: "Windows Server"

  WindowsRDPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: IsItWindows
    Properties:
      GroupDescription: Allows port inbound for RDP
      GroupName: windows-bastion-rdp
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '3389'
        ToPort: '3389'
        CidrIp: !Ref PublicIP

  LinuxBastionHost:
    Type: AWS::EC2::Instance
    Condition: IsItLinux
    DependsOn:
      - LinuxSSHSecurityGroup
    Properties:
      ImageId: !FindInMap [Linux, !Ref "AWS::Region", AMI]
      InstanceType: t2.small
      KeyName: !Ref EC2KeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet:
            - Ref: LinuxSSHSecurityGroup
          SubnetId:
            Ref: InstanceSubnet
      Tags:
      - Key: "Name"
        Value: "Linux Bastion"
      - Key: "Environment"
        Value: "Management"
      - Key: "Operating System"
        Value: "Amazon Linux"
      Userdata:
          'Fn::Base64': !Sub |
            #!/bin/bash
            yum update -y

  LinuxSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: IsItLinux
    Properties:
      GroupDescription: Allows port inbound for SSH
      GroupName: linux-bastion-ssh
      VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: !Ref PublicIP
